# ml_model_map_candidates

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  manual.md  model.md  pyproject.toml
room_matcher/: __init__.py  api.py  clean.py  cleaning.py  evaluate.py  model.py  model2.py  paths.py  progress.py  train.py
tests/: test_api.py  test_cleaning.py  test_evaluate.py  test_model.py  test_model2.py  test_paths.py
